2013-06-25  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalFontInfo.m:
	* Source/opal/OpalContext.m:
	* Source/opal/OpalGState.m:
	* Source/opal/OpalFontEnumerator.m:
	* Source/opal/OpalSurface.m:
	* Headers/opal/OpalFontInfo.h:
	* Headers/opal/OpalContext.h:
	* Headers/opal/OpalGState.h:
	* Headers/opal/OpalFontEnumerator.h:
	* Headers/opal/OpalSurface.h:
	Minimal code for dummy graphics backend now implemented for
	Opal backend.

2013-06-23  Ivan Vucica <ivan@vucica.net>

	* config.h.in:
	* configure.ac:
	* configure:
	* Source/GSBackend.m:
	Added Opal backend to appropriate places (avoiding rebuild of
	configure and config.h.in).

	* Source/opal/OpalPSSurface.m:
	* Source/opal/GNUmakefile:
	* Source/opal/OpalFontInfo.m:
	* Source/opal/OpalPDFSurface.m:
	* Source/opal/OpalContext.m:
	* Source/opal/OpalGState.m:
	* Source/opal/OpalFontEnumerator.m:
	* Source/opal/OpalSurface.m:
	* Source/opal/OpalFaceInfo.m:
	Added dummy files for the Opal backend.

2013-05-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/Win32CairoSurface.m (-initWithDevice:): Make safer
	against the surface being deallocated during this method.
	* Source/cairo/Win32CairoSurface.m
	(WIN32Server-contentsOfScreen:inRect:): Screen grabbing code.
	* Headers/win32/WIN32Server.h,
	* Source/win32/WIN32Server.m (-monitorHandleForScreen:,
	-createHdcForScreen:, deleteScreenHdc:): Add helper methods for screen grabbing.
	Patch by Marcian Lytwyn <marcian.lytwyn@advcsi.com>

2013-04-24 23:10-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/cairo/CairoGState.m: Added code in -drawGradient:
	fromPoint:toPoint:options: to handle gradients for colorspaces
	other than NSCalibratedRGBColorSpace, NSDeviceRGBColorSpace,
	NSCalibratedWhiteColorSpace, NSDeviceWhiteColorSpace,
	NSCalibratedBlackColorSpace, NSDeviceBlackColorSpace.  The
	previous implementation assumed RGB based colorspaces only.

2012-03-01  Richard Frith-Macdonald <rfm@gnu.org>
