@@ -1,3 +1,11 @@
+2013-06-27  German A. Arias <german@xelalug.org>
+
+	* Source/x11/XGServerEvent.m (-processEvent:): Don't add events
+	WindowResized and WindowMoved in event_queue, to don't delay its
+	sent. Instead, send these directly to the window. If not, the
+	programa can move/resize the window while we send these events,
+	causing a confusion.
+
 2013-06-25  Ivan Vucica <ivan@vucica.net>
 
 	* Source/opal/OpalFontInfo.m:
